5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1799_2574.log
== TEST (2019-06-07 21:00:13) 
-- CODE:
from numpy import*
s = input("senha:")

for i in s:
	if (len(s) >= 8):
		elif (s[i].islower()):
		
		
		
-- ERROR:
File "XXXX", line 6
    elif (s[i].islower()):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:01:22) 
-- CODE:
from numpy import*
s = input("senha:")

for i in s:	
-- ERROR:
File "XXXX", line 5
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:01:43) 
-- CODE:
from numpy import*
s = input("senha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:01:50) 
-- CODE:
from numpy import*
s = input("senha:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:02:15) 
-- CODE:
from numpy import*
s = input("senha:")
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
